timeline added to home

--- a/home-1.html
+++ b/home-1.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
     <!-- fancybox css -->
     <link rel="stylesheet" href="css/plugins/fancybox.min.css">
+    <!-- Timeline css -->
+    <link rel="stylesheet" href="css/timeline.css">
     <!-- custom css -->
     <link rel="stylesheet" href="css/style.css">
     <!-- fontawesome cdn -->
@@ -658,6 +660,91 @@
                     </div>
                 </section>
                 <!-- services end -->
+
+                <!-- Timeline start -->
+                <section class="section-vr-timeline">
+                    <div class="section-timeline">
+                      <div class="container-1282">
+                        <div class="timeline_component">
+                          <div class="timeline_progress">
+                            <div class="timeline_progress-bar"></div>
+                          </div>
+                          <div  class="timeline_item">
+                            <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3d4-0686a3cd" class="timeline_left">
+                              <div class="timeline_date-text">Brief</div>
+                            </div>
+                            <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3d7-0686a3cd" class="timeline_centre">
+                              <div class="timeline_circ"></div>
+                            </div>
+                            <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3d9-0686a3cd" class="timeline_right">
+                              <div class="margin-bottom-xlarge">
+                                <div class="timeline_text">Share your dreams and ambitions with xfiner, simply contact us.</div>
+                              </div>
+                            </div>
+                          </div>
+                          <div data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a3e0" class="timeline_item">
+                            <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3e1-0686a3cd" class="timeline_left">
+                              <div class="timeline_date-text">Discover</div>
+                            </div>
+                            <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3e4-0686a3cd" class="timeline_centre">
+                              <div class="timeline_circ"></div>
+                            </div>
+                            <div class="timeline_right">
+                              <div class="margin-bottom-medium">
+                                <div class="timeline_text">Let's have a discussion, and we will show you the even finer ways.<br>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a3eb" class="timeline_item">
+                            <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3ec-0686a3cd" class="timeline_left">
+                              <div class="timeline_date-text">Scope</div>
+                            </div>
+                            <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3ef-0686a3cd" class="timeline_centre">
+                              <div class="timeline_circ"></div>
+                            </div>
+                            <div class="timeline_right">
+                              <div class="margin-bottom-medium">
+                                <div class="timeline_text">If you like, we will tell you how much time and budget it may take.<br>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a3f6" class="timeline_item">
+                            <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3f7-0686a3cd" class="timeline_left">
+                              <div class="timeline_date-text">Assemble</div>
+                            </div>
+                            <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3fa-0686a3cd" class="timeline_centre">
+                              <div class="timeline_circ"></div>
+                            </div>
+                            <div class="timeline_right">
+                              <div class="margin-bottom-medium">
+                                <div class="timeline_text">If you like, we will assemble the xteam on our private platform.<br></div>
+                              </div>
+                            </div>
+                          </div>
+                          <div data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a401" class="timeline_item">
+                            <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a402-0686a3cd" class="timeline_left">
+                              <!-- <div class="timeline_date-text">Start</div> -->
+                            </div>
+                            <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a405-0686a3cd" class="timeline_centre">
+                              <!-- <div class="timeline_circ"></div> -->
+                            </div>
+                            <div class="timeline_right">
+                              <div class="margin-bottom-medium end">
+                                <!-- <div class="timeline_text">And then we start, to finish, with excellence, precision and passion.<br> -->
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="overlay-fade-bottom"></div>
+                          <div class="overlay-fade-top"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </section>
+                
+                <!-- Timeline end -->
 
                 <!-- projects -->
                 <div class="mil-content">
