--- a/home-1.html
+++ b/home-1.html
@@ -104,7 +104,7 @@
                                         <a class="mil-dark" href="#.">Home</a>
                                     </li>
                                     <li class="mil-up mil-dark">
-                                        <a class="mil-dark" href="#.">Portfolio</a>
+                                        <a class="mil-dark" href="#.">Design</a>
                                     </li>
                                     <li class="mil-up mil-dark">
                                         <a class="mil-dark" href="#.">Services</a>
