design page - featured prod & services added

--- a/home-1.html
+++ b/home-1.html
@@ -101,10 +101,10 @@
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
                                     <li class="mil-up mil-active mil-dark">
-                                        <a class="mil-dark" href="#.">Home</a>
+                                        <a class="mil-dark" href="home-1.html">Home</a>
                                     </li>
                                     <li class="mil-up mil-dark">
-                                        <a class="mil-dark" href="#.">Design</a>
+                                        <a class="mil-dark" href="design.html">Design</a>
                                     </li>
                                     <li class="mil-up mil-dark">
                                         <a class="mil-dark" href="#.">Services</a>
