--- a/test.html
+++ b/test.html
@@ -3,153 +3,141 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="css/style.css">
-<title>Horizontal Video with Content</title>
+<title>Our Services</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
+<!-- Google Fonts -->
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
+
 <style>
-
-
-  .container-sid {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 4px;
-  }
-
-  .video-container {
-    width: 100%;
-    max-width: 800px; /* Set maximum width for the video container */
-    height: auto;
-    background-color: #f0f0f0;
-    margin-top: 20px; /* Add margin to separate video and content */
-  }
-
-  .video {
-    width: 100%;
-    height: auto;
-  }
-
-  .content {
-    width: 100%;
-    max-width: 800px; /* Set maximum width for the content */
-    background-color: #fff;
-  }
-
-  .section {
-    padding: 20px;
-  }
-
-  .section h2 {
-    text-align: center;
-  }
-
-  ul {
-    list-style: none;
-    padding: 0;
-  }
-
-  .expandable {
-    cursor: pointer;
-  }
-
-  .expanded {
-    display: none;
-  }
-
-  .expanded.active {
-    display: block;
-  }
-
-  @media only screen and (min-width: 601px) {
-    .container-sid {
-      flex-direction: row;
-      justify-content: center;
+    body {
+        font-family: 'Outfit', sans-serif;
+        margin: 0;
+        padding: 0;
     }
 
-    .content {
-      margin-right: 20px; /* Add space between content and video on larger screens */
+    .services-section {
+        text-align: center;
+        padding: 50px 0;
+        padding: 10px;
     }
 
-    .video-container {
-      margin-top: 0; /* Remove margin top on larger screens */
+    .service-box {
+        position: relative;
+        width: calc(33.33% - 22px); 
+        background-color: white;
+        border: 2px solid whitesmoke;
+        display: inline-block;
+        margin: 0 2px; 
+        margin-bottom: 2px;
+        padding: 15px;
+        border-radius: 0;
+        transition: background-color 0.3s;
+        box-sizing: border-box;
     }
-  }
+
+    .service-box:hover {
+        background-color: #f89c1f;
+        cursor: pointer;
+    }
+
+    .service-box:hover h3,
+    .service-box:hover i {
+        color: #fff;
+    }
+
+    .service-box h3 {
+        color: #333;
+        font-size: 20px;
+        margin: 0;
+        text-align: left;
+        transition: color 0.3s;
+    }
+
+    .service-box i {
+        font-size: 24px;
+        margin-bottom: 10px;
+        display: block;
+        color: #333;
+        text-align: left;
+        transition: color 0.3s;
+    }
+
+    @media (max-width: 768px) {
+        .service-box {
+            width: calc(50% - 22px); /* Adjusted width to account for 2px margin */
+            margin-bottom: 20px;
+        }
+    }
+
+    @media (max-width: 480px) {
+        .service-box {
+            width: calc(100% - 22px); /* Adjusted width to account for 2px margin */
+        }
+    }
+
+    .text-separator {
+        margin: 20px auto;
+        width: 50px;
+        height: 2px;
+        background-color: #333;
+    }
+
+    .lorem-ipsum {
+        text-align: center;
+        margin-bottom: 20px;
+    }
 </style>
 </head>
 <body>
 
-<div class="container-sid">
-  <div class="content">
-    <div class="section">
-      <h2>Why are we special?</h2>
-      <p style="text-align: center;">Lorem ipsum dolor sit amet, elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      <ul>
-        <li class="expandable">
-          <h3 style="padding-top: 8px; font-size: 2em;">Award Winning +</h3>
-          <p class="expanded" style="text-align:justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </li>
-        <li class="expandable">
-          <h3 style="font-size: 2em;">Flawless Design +</h3>
-          <p class="expanded" style="text-align:justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </li>
-        <li class="expandable">
-          <h3 style="font-size: 2em;">Technical Excellence +</h3>
-          <p class="expanded" style="text-align:justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </li>
-        <li class="expandable">
-          <h3 style="font-size: 2em;">Easy Building +</h3>
-          <p class="expanded" style="text-align:justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </li>
-      </ul>
+<section class="services-section">
+    <h2>Our Services</h2>
+    
+    <div class="lorem-ipsum">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut libero eu erat posuere facilisis. Sed mollis mauris ut lacinia tempor.</p>
     </div>
-  </div>
-  <div class="video-container">
-    <video id="video" autoplay loop muted class="video">
-      <source src="video/vid1.mp4" type="video/mp4">
-    </video>
-    <button id="play-pause-btn" class="play">&#10074;&#10074;</button>
-  </div>
-</div>
+    <div class="text-separator"></div>
+    
+    <div class="service-box">
+        <i class="fas fa-paint-brush"></i>
+        <h3>Design 1</h3>
+    </div>
+    <div class="service-box">
+        <i class="fas fa-pencil-alt"></i>
+        <h3>Design 2</h3>
+    </div>
+    <div class="service-box">
+        <i class="fas fa-drafting-compass"></i>
+        <h3>Design 3</h3>
+    </div>
+    <div class="service-box">
+        <i class="fas fa-cube"></i>
+        <h3>Design 4</h3>
+    </div>
+    <div class="service-box">
+        <i class="fas fa-palette"></i>
+        <h3>Design 5</h3>
+    </div>
+    <div class="service-box">
+        <i class="fas fa-brush"></i>
+        <h3>Design 6</h3>
+    </div>
+    <div class="service-box">
+        <i class="fas fa-paint-roller"></i>
+        <h3>Design 7</h3>
+    </div>
+    <div class="service-box">
+        <i class="fas fa-magic"></i>
+        <h3>Design 8</h3>
+    </div>
+    <div class="service-box">
+        <i class="fas fa-search"></i>
+        <h3>Design 9</h3>
+    </div>
 
-<script>
-  const video = document.getElementById('video');
-  const playPauseBtn = document.getElementById('play-pause-btn');
-
-  function playVideo() {
-      video.play();
-      playPauseBtn.innerHTML = '&#10074;&#10074;';
-  }
-
-  function pauseVideo() {
-      video.pause();
-      playPauseBtn.innerHTML = '&#9658;';
-  }
-
-  playPauseBtn.addEventListener('click', function () {
-      if (video.paused) {
-          playVideo();
-      } else {
-          pauseVideo();
-      }
-  });
-
-  playVideo();
-
-  video.addEventListener('ended', function () {
-      video.play();
-  });
-</script>
-
-<script>
-  document.addEventListener("DOMContentLoaded", function() {
-    const expandables = document.querySelectorAll('.expandable');
-
-    expandables.forEach(item => {
-      item.addEventListener('click', () => {
-        item.querySelector('.expanded').classList.toggle('active');
-      });
-    });
-  });
-</script>
+</section>
 
 </body>
 </html>
