--- a/design.html
+++ b/design.html
@@ -560,7 +560,7 @@ counters.forEach(animateCounter);
                         </div>
                     </div>
                 </section>
-                <section id="contact">
+                <!-- <section id="contact">
                     <div class="container ">
                         <h3 class="mil-center mil-up mil-mb-120">Let's <span class="mil-thin">Talk</span></h3>
                         <form class="row align-items-center">
@@ -586,7 +586,7 @@ counters.forEach(animateCounter);
                             </div>
                         </form>
                     </div>
-                </section>
+                </section> -->
 
                 <!-- contact form end -->
                 <!-- call to action end -->
